Refactor audit service and introduce cjeckout queue put methods
